# deploy

./: .gitignore
parser/: machine.py  plugins.py  pyproject.toml
parser/examples/: matrix.yml
parser/src/: network.py
parser/src/parser/: machine.py  network.py  parser.py
parser/test/: test_network.py
