[project]
name = "parser"
version = "0.1.0"
description = "'Deploy' module to parse infra as code files"
authors = [
    {name = "Ethan Robert",email = "ethan.rbrt90@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
# Ceci aide Pytest à trouver le package 'parser' dans le dossier src
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
